--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
          <div class="hat">
          	<a href="">главная</a>
          	<a href="">миры</a>
-         	<a href="">биомы</a>
+         	<a href="bioms.html">биомы</a>
          	<a href="mobs.html">мобы</a>
          </div>
          <div class="promo" >
